# fastrender

./: .gitignore  .rustfmt.toml  0002-Add-patch-export-for-numeric-calc-support.patch  AGENTS.md  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS.md  NOTES.md  PLAN.md  README.md  REFACTOR.md  SCRATCHPAD.md  VENDOR_PATCHES.md  clippy.toml  fix_test_assertions.py  grind-spec.sh  handoff.md  justfile  notes_agent19.md  scratch_notes.md  scratchpad.md
.cargo/: config.toml
.github/workflows/: chrome_fixture_diff.yml  ci.yml  perf.yml  release.yml  wpt.yml
benches/: cascade_bench.rs  colr_sweep.rs  common.rs  comprehensive.rs  css_parse_pageset.rs  disk_cache_contention.rs  dom_clone_bench.rs  dom_parse_bench.rs  element_attr_cache_bench.rs  float_bench.rs  formatting_context_factory.rs  fragment_clone.rs  fragmentation_bench.rs  gradient_raster.rs  html_parse_bench.rs  http_agent_pool.rs  layout_benches.rs  layout_hotspots.rs  layout_parallel.rs  paint_benches.rs  perf_regressions.rs  render_benchmark.rs  reshape_cache_bench.rs  selector_bloom_bench.rs  selector_candidates_bench.rs  selector_link_bench.rs  style_set_collectors.rs  table_fixup_traversal.rs  text_benches.rs  text_shaping.rs
docs/: README.md  api.md  architecture.md  cli.md  conformance.md  css-loading.md  debugging.md  env-vars.md  index.md  instrumentation.md  perf-logging.md  perf_logging.md  profiling-linux.md  resource-limits.md  running.md  testing.md  vendoring.md
docs/architecture/: decisions.md  foundation.md
docs/core/: formatting-contexts.md  integration.md  type-system.md
docs/css-features/: margin-collapse.md  media-queries.md  roadmap.md
docs/guides/: api-design.md  code-standards.md  migration.md  (+3 more)
examples/: inspect_frag.rs  simple.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: animation_properties.rs  color_fonts.rs  css_parser.rs  selectors.rs  svg_filters.rs  vars_and_calc.rs
local_patches/: 0001-Delegate-PositionedLayout-absolute-helper.patch  0001-Honor-marker-gaps-for-marker-images-in-RTL.patch  0001-Note-pending-marker-paint-geometry-review.patch  0002-Archive-pending-marker-review-note-patch.patch  0002-Note-marker-image-gap-branch.patch  0002-Note-pull-timeout.patch  0003-Document-marker-branch-push-timeout.patch  0003-Note-push-blockage.patch  0004-Archive-local-commits-as-patches.patch  0005-Add-patch-archive-note.patch  0006-Refresh-patch-archive.patch  0007-Update-scratchpad-for-refreshed-patches.patch  0008-Regenerate-patch-archive-including-latest-commits.patch  0009-Update-scratchpad-for-regenerated-patch-archive.patch  0010-Resync-patch-archive-with-all-local-commits.patch  0011-Adjust-scratchpad-for-latest-patch-archive.patch  0012-Refresh-patch-archive-with-all-current-commits.patch  0013-Update-scratchpad-for-refreshed-11-patch-archive.patch  0014-Refresh-patch-archive-13-patches-including-initial-w.patch  0015-Simplify-scratchpad-patch-archive-note.patch  0016-Finalize-patch-archive-covering-all-local-commits.patch  0017-Assert-decoration-color-thickness-and-drop-unused-va.patch  0018-Note-display-list-test-cleanup-in-scratchpad.patch  363dbfd-note-unitless-zero.patch  5a7b075-calc-numeric.patch
scripts/: chrome_baseline.sh  chrome_fixture_baseline.sh  chrome_vs_fastrender.sh  chrome_vs_fastrender_fixtures.sh  install_chrome_baseline_deps_ubuntu.sh  pageset.sh  profile_perf.sh  profile_samply.sh  run_limited.sh  samply_summary.py
src/: accessibility.rs  api.rs  box_generation.rs  compat.rs  css.rs  dom.rs  error.rs  geometry.rs  image_compare.rs  image_loader.rs  image_output.rs  layout.rs  layout_v1.rs  lib.rs  pageset.rs  paint.rs  paint_v1.rs  render_control.rs  renderer.rs  resource.rs  scroll.rs  style.rs  style_old.rs  style_v1.rs  svg.rs  system.rs  text.rs  text_v1.rs  user_agent.css
tasks/: README.md  logical_background_mapping.md
tests/: absolute_position_body.rs  accessibility_accname_references.rs  accessibility_name_computation.rs  accessibility_states_roles.rs  accessibility_test.rs  animation_tests.rs  aria_hidden_layout.rs  base_url_dom_override.rs  bin_tests.rs  bot_mitigation_fetch_errors.rs  box_generation_ad_placeholders.rs  box_generation_onenav.rs  bundled_font_integrity_test.rs  bundled_font_must_cover_test.rs  bundled_fontdb_sharing.rs  cascade_diagnostics_env_test.rs  clip_mask_perf_regression.rs  color_glyph_opacity.rs  colr_v1_color_font_test.rs  colr_v1_linear_gradient_test.rs  colr_v1_radial_gradient_test.rs  colr_v1_sweep_gradient_test.rs  colr_v1_variable_outline_test.rs  composed_dom_snapshot_test.rs  content_generation_test.rs  content_visibility_regression_test.rs  css_document_style_set_pipeline.rs  css_double_fetch.rs  css_empty_url_no_fetch.rs  css_import_integration.rs  css_import_owned_resolver.rs  css_inlining_deadline_test.rs  css_loader_tests.rs  css_numeric_functions.rs  css_stylesheet_memoization_equivalence.rs  css_supports_vendor_properties.rs  css_timeout_test.rs  data_url_svg.rs  debug_snapshot_tests.rs  defaults_test.rs  (+157 more)
tmp_colr_render/: Cargo.toml
tools/: bench_compare.rs
xtask/: Cargo.toml
xtask/src/: capture_accuracy_fixtures.rs  capture_missing_failure_fixtures.rs  chrome_baseline_fixtures.rs  fixture_chrome_diff.rs  fixture_determinism.rs  generate_emoji_tables.rs  import_page_fixture.rs  lib.rs  main.rs  pageset_failure_fixtures.rs  recapture_page_fixtures.rs  sync_progress_accuracy.rs  update_pageset_guardrails.rs  update_pageset_guardrails_budgets.rs  update_pageset_timeout_budgets.rs  update_pageset_timeouts.rs  validate_page_fixtures.rs
xtask/tests/: capture_accuracy_fixtures.rs  capture_missing_failure_fixtures.rs  chrome_baseline_fixtures.rs  diff_renders_args.rs  diff_renders_no_build.rs  disk_cache_args.rs  fetch_pages_args.rs  fixture_chrome_diff.rs  fixture_determinism.rs  help.rs  import_page_fixture.rs  import_page_fixture_html_entities.rs  import_page_fixture_missing.rs  import_page_fixture_paths.rs  pageset_extra_args.rs  pageset_failure_fixtures.rs  prefetch_assets_capabilities.rs  recapture_page_fixtures.rs  sync_progress_accuracy.rs  validate_page_fixtures.rs
(+1396 files in other folders)
