[package]
name = "fastrender"
version = "0.1.0"
edition = "2021"
authors = ["FastRender Contributors"]
description = "High-performance Rust HTML/CSS to image renderer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastrender/fastrender"
keywords = ["html", "css", "renderer", "image", "screenshot"]
categories = ["rendering", "graphics", "web-programming"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
# ============================================================================
# HTML/CSS Parsing
# ============================================================================

# HTML parsing
html5ever = "0.35"
markup5ever_rcdom = "0.35"

# CSS parsing - using Mozilla's battle-tested parsers
cssparser = "0.35"
selectors = "0.32"
precomputed-hash = "0.1"

# ============================================================================
# Layout
# ============================================================================

# Layout engine - vendored locally to fix grid auto-placement
taffy = { path = "vendor/taffy" }

# ============================================================================
# Text Shaping and Fonts
# ============================================================================

# Text shaping
rustybuzz = "0.20"
ttf-parser = "0.25"
fontdb = "0.23"

# Unicode text processing
unicode-linebreak = "0.1"
unicode-bidi = "0.3"
unicode-script = "0.5"
unicode-segmentation = "1.11"
unicode-vo = "0.1"

# Hyphenation
hyphenation = { version = "0.8", features = ["embed_en-us"] }

# ============================================================================
# 2D Graphics and Rendering
# ============================================================================

# 2D rendering backend
tiny-skia = "0.11"

# Image encoding/decoding
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# SVG rendering
resvg = "0.43"

# ============================================================================
# Utilities
# ============================================================================

# CSS color parsing
csscolorparser = "0.6"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Error handling
thiserror = "1.0"

# HTTP client for loading resources
ureq = "3.1"

# Base64 encoding for data URLs
base64 = "0.22"

# ============================================================================
# Development Dependencies
# ============================================================================

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "render_benchmark"
harness = false

[[bench]]
name = "comprehensive"
harness = false

[[bench]]
name = "layout_benches"
harness = false

[[bench]]
name = "paint_benches"
harness = false

# ============================================================================
# Release Profile Optimization
# ============================================================================

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
