[package]
name = "fastrender"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust HTML/CSS to image renderer"
rust-version = "1.70"
publish = false

[features]
default = []
box_generation_demo = []

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
chrono = "0.4.42"
csscolorparser = "0.6"
cssparser = "0.35"
encoding_rs = "0.8"
fontdb = "0.23"
html5ever = "0.35"
hyphenation = { version = "0.8", features = ["embed_en-us"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
lru = "0.12"
kamadak-exif = "0.6"
markup5ever_rcdom = "0.35"
memchr = "2.7"
num_cpus = "1.17.0"
percent-encoding = "2.3"
precomputed-hash = "0.1"
rayon = "1.10.0"
resvg = "0.43"
roxmltree = "0.20"
rustybuzz = "0.20"
selectors = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taffy = { path = "vendor/taffy" }
thiserror = "1.0"
tiny-skia = "0.11"
ttf-parser = "0.25"
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
unicode-script = "0.5"
unicode-segmentation = "1.11"
unicode-vo = "0.1"
unicode-general-category = "0.6"
url = "2.5"
urlencoding = "2.1"
ureq = "3.1"
wuff = "0.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "cascade_bench"
harness = false

[[bench]]
name = "render_benchmark"
harness = false

[[bench]]
name = "comprehensive"
harness = false

[[bench]]
name = "layout_benches"
harness = false

[[bench]]
name = "paint_benches"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
