[package]
name = "fastrender"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust HTML/CSS to image renderer"
rust-version = "1.70"
publish = false

[workspace]
members = ["tmp_colr_render","xtask"]
resolver = "2"

[features]
default = []
box_generation_demo = []
disk_cache = ["sha2"]
preserve3d_warp = []

[dependencies]
base64 = "0.22"
avif-decode = { version = "1.0", default-features = false }
avif-parse = "1.4"
clap = { version = "4", features = ["derive"] }
chrono = "0.4.42"
csscolorparser = "0.6"
cssparser = "0.35"
encoding_rs = "0.8"
fontdb = "0.23"
html5ever = "0.35"
hyphenation = { version = "0.8", features = ["embed_en-us"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "avif"] }
lru = "0.12"
kamadak-exif = "0.6"
markup5ever_rcdom = "0.35"
memchr = "2.7"
num_cpus = "1.17.0"
percent-encoding = "2.3"
precomputed-hash = "0.1"
rayon = "1.10.0"
resvg = "0.43"
svgtypes = "0.15"
roxmltree = "0.20"
rustybuzz = "0.20"
selectors = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
pathdiff = "0.2"
glob = "0.3"
regex = "1"
taffy = { path = "vendor/taffy" }
thiserror = "1.0"
tiny-skia = "0.11"
ttf-parser = "0.25"
unicode-bidi = "0.3"
unicode-bidi-mirroring = "0.4"
unicode-linebreak = "0.1"
unicode-segmentation = "1.11"
unicode-vo = "0.1"
unicode-general-category = "0.6"
url = "2.5"
urlencoding = "2.1"
ureq = "3.1"
webp = { version = "0.3.1", default-features = false }
wuff = "0.2"
tar = "0.4"
sha2 = { version = "0.10", optional = true }
httpdate = "1.0"
http = "1"
read-fonts = "0.20"
skrifa = "0.20"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "perf_regressions"
harness = false

[[bin]]
name = "bench_compare"
path = "tools/bench_compare.rs"

[[bench]]
name = "selector_bloom_bench"
harness = false

[[bench]]
name = "layout_parallel"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
selectors = { path = "vendor/selectors" }
