[package]
name = "fastrender-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
fastrender = { path = ".." }
libfuzzer-sys = "0.4"

[workspace]
members = ["."]
resolver = "2"

[profile.release]
debug = 1

# Match the main crate's patched selectors dependency for fuzz builds.
[patch.crates-io]
selectors = { path = "../vendor/selectors" }

[[bin]]
name = "css_parser"
path = "fuzz_targets/css_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "selectors"
path = "fuzz_targets/selectors.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vars_and_calc"
path = "fuzz_targets/vars_and_calc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "svg_filters"
path = "fuzz_targets/svg_filters.rs"
test = false
doc = false
bench = false

[[bin]]
name = "animation_properties"
path = "fuzz_targets/animation_properties.rs"
test = false
doc = false
bench = false

[[bin]]
name = "color_fonts"
path = "fuzz_targets/color_fonts.rs"
test = false
doc = false
bench = false
