[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
fastrender = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
sha2 = "0.10"
url = "2.5"
walkdir = "2.5"
tempfile = "3.10"
cssparser = "0.35"
image = { version = "0.25", default-features = false, features = ["png"] }
pathdiff = "0.2"
